Modificado varias informações do projeto.

--- a/publico/mundo/index.html
+++ b/publico/mundo/index.html
@@ -28,10 +28,7 @@
                             <a href="">Deuses</a>
                         </li>
                         <li>
-                            <a href="">Facções</a>
-                        </li>
-                        <li>
-                            <a href="">Seus Personagens</a>
+                            <a href="">Bestiário</a>
                         </li>
                         <li>
                             <a href="">Logout</a>
