--- a/publico/deuses/home.html
+++ b/publico/deuses/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/publico/home/home.css">
-    <title>Golden Kingdom - Home</title>
+    <title>Golden Kingdom - Deuses</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                             <a href="">Home</a>
                         </li>
                         <li>
-                            <a href="">Sobre o mundo</a>
+                            <a href="../../publico/mundo/index.html">Sobre o mundo</a>
                         </li>
                         <li>
                             <a href="">Classes</a>
@@ -28,10 +28,7 @@
                             <a href="">Deuses</a>
                         </li>
                         <li>
-                            <a href="">Facções</a>
-                        </li>
-                        <li>
-                            <a href="">Seus Personagens</a>
+                            <a href="">Bestiário</a>
                         </li>
                         <li>
                             <a href="">Logout</a>
@@ -44,7 +41,7 @@
             </main>
         </div>
         <footer class="rodape">
-            <p>&copy;2025, todos os direitos reservados para The Golden Kingdom.</p>
+            <span>&copy;2025, todos os direitos reservados para The Golden Kingdom.</span>
         </footer>
     </div>
 </body>
